# ghidra-mcp-next

./: .env.template  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  ghidra-mcp-setup.ps1  pom.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: README.md  codeql.yml  pre-release.yml  release-regression.yml  release.yml  tests.yml
docs/: Context-Window-Analysis.md  MAVEN_VERSION_MANAGEMENT.md  MULTI_PROGRAM_SUPPORT_ANALYSIS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE_SCRIPTS.md  README.md  STRUCT_RESIZE_WORKFLOW.md  TESTING.md
docs/prompts/: CROSS_VERSION_FUNCTION_MATCHING.md  DATA_SECTION_WORKFLOW.md  DATA_TYPE_INVESTIGATION_WORKFLOW.md  ORPHANED_CODE_DISCOVERY_WORKFLOW.md  README.md  TOOL_USAGE_GUIDE.md
docs/releases/: README.md  RELEASE_CHECKLIST.md
docs/superpowers/plans/: 2026-07-16-architecture-slimming.md  2026-07-17-warning-free-java.md
docs/superpowers/specs/: 2026-07-16-architecture-slimming-design.md  2026-07-17-warning-free-java-design.md
ghidra_scripts/: ArgumentsUnifier.py  BSimBulkQuery.java  BSimIngestProgram.java  BSimQueryFunction.java  BSimTestConnection.java  ClearAndDisasm.java  ClearCallReturnOverrides.java  CreateFunctionsFromArray.py  DeleteFunctionAt.java  FindFunctionsAfterPadding.java  FindFunctionsAfterPaddingAllPrograms.java  FindFunctionsAtINT3.java  FixIATExternalFunctionAddresses.java  README.md  RemoveOrphanedFunctions.java  UpgradeAllPrograms.java  namespacer.py
python/bridge_mcp_ghidra/: __init__.py  cli.py  config.py  connection.py  discovery.py  dispatch.py  handshake.py  registry.py  schema.py  selection.py  state.py  static_tools.py  transport.py
scripts/ghidra/: ImportMSDLPDB.java  README.md
src/assembly/: ghidra-extension.xml
src/main/java/com/xebyte/: GhidraMCPPlugin.java
src/main/java/com/xebyte/core/: AddressCommentCore.java  AddressEmulationEngine.java  AnalysisService.java  AnalyzerConfiguration.java  AnnotationScanner.java  BinaryComparisonService.java  CommentService.java  ControlFlowCore.java  ControlFlowService.java  DataRegionCore.java  DataRegionService.java  DataTypeService.java  DebuggerAttachSemantics.java  DebuggerMemorySemantics.java  DebuggerService.java  DebuggerStateWaiter.java  DebuggerTargetMethodCore.java  DebuggerTransferSemantics.java  EmulationService.java  EndpointDef.java  EndpointRegistry.java  ExportService.java  FlowDisassemblyService.java  FrontEndProgramProvider.java  FunctionService.java  GeneratedSymbolNames.java  GuiContextService.java  GuiProjectService.java  JsonHelper.java  ListingClearCore.java  ListingMutationService.java  ListingRangeService.java  ListingService.java  McpTool.java  MemoryBlockCore.java  MemoryBlockLifecycleCore.java  MemoryBlockService.java  Param.java  PatchBytesCore.java  ProgramScriptService.java  (+13 more)
src/main/java/com/xebyte/headless/: GhidraMCPHeadlessServer.java  HeadlessEndpointHandler.java  HeadlessManagementService.java  (+1 more)
src/main/resources/: extension.properties
src/main/resources/com/xebyte/: version.properties
src/test/java/com/xebyte/: EndpointRegistrationTest.java  GhidraMCPPluginTest.java
tests/: conftest.py  endpoints.json  run_tests.py
tests/fixtures/ghidra_benchmark/: build.py
tests/fixtures/ghidra_benchmark/regression/: Benchmark.dll.yaml  BenchmarkDebug.exe.yaml  __schema__.md
tests/fixtures/ghidra_benchmark/src/: crc16.c  gcd.c  get_stat_list_flags.c  get_stat_list_layer.c  get_stat_list_owner_guid.c  get_stat_list_prev_link.c  stat_list_add.c  state_machine.c  str_len.c
tests/integration/: test_all_endpoints.py  test_global_endpoints.py  test_live_safe_smoke.py  test_readonly_endpoints.py  test_safe_write_endpoints.py
tests/pester/: GhidraMcpSetup.Tests.ps1
tests/unit/: __init__.py  test_bridge_cli.py  test_bridge_utils.py  test_bridge_version.py  test_build_surface.py  test_capability_handshake.py  test_create_project.py  test_documentation_surface.py  test_endpoint_catalog.py  test_ghidra_script_inventory.py  test_mcp_tool_functions.py  test_mcp_tools.py  test_project_consistency.py  test_protected_workflows.py  test_release_automation.py  test_removed_subsystems.py  test_response_schemas.py  test_setup_cli.py  test_setup_ghidra.py  test_setup_requirements.py  test_version_bump.py  test_versioning.py
tools/: README.md  bridge_version.py  release_automation.py
tools/context_analysis/: README.md  advanced_context_analysis.py  measure_context.py
tools/setup/: cli.py  ghidra.py  maven.py  requirements.py  version_bump.py  versioning.py
workflows/: README.md
(+60 files in other folders)
